--- a/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
+++ b/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
@@ -13,8 +13,7 @@
                      <div class="section-border green_border no-margin"></div>
                      <div class="spacer_10"></div>
                      <div class="section-subtitle light_subtitle">
-                            L'histoire de la cryptomonnaie est en fait assez courte. Oui, nous avons eu des systèmes de monnaie numérique avant que ces cryptomonnaies existaient, mais ils ne sont pas la même chose.
-							Les anciennes versions de monnaies numériques étaient strictement centralisée, alors que ces nouvelles formes de crypto-monnaie, comme Bitcoin et Ethereum, sont décentralisées dans leur nature</div>
+                        L'histoire de la cryptomonnaie est en fait assez courte. En effet, il y a eu des systèmes de monnaie numérique avant que les cryptomonnaies n'existent, mais ils fonctionnaient de manières différentes. Les anciennes versions de monnaies numériques étaient strictement centralisée, alors que les nouvelles formes de crypto-monnaie, comme le Bitcoin et l'Ethereum qui elles sont décentralisées dans leur nature.</div>
                  </div>
                  <div class="spacer_40"></div>
                  {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInLeft">
@@ -54,11 +53,7 @@
                      <div class="section-border green_border no-margin"></div>
                      <div class="spacer_10"></div>
                      <div class="section-subtitle light_subtitle ">
-                            Tout cela a commencé avec le Bitcoin tristement célèbre et un homme nommé Satoshi Nakamoto.
-                            L'objectif de Nakamoto au commencement était rien de plus que de créer un système informatique de trésorerie pairs à pairs (P2P) .
-                            Les gens avaient longtemps essayé de créer une sorte de système d'argent numérique en ligne, mais avaient toujours échoué en raison des problèmes avec la centralisation.
-                            il a donc décidé de créer un système de trésorerie numérique qui n'avait aucune autorité centralisée.
-                            C'est ainsi que vis la naissance du bitcoins et l'utilisation de la blockchain pour une monnaie numérique </div>
+                            Ce phénomène a débuté grâce au développement et à l’essor de la plus célèbre crypto-monnaie, le Bitcoin, crée par un homme ou un groupe de personnes sous le pseudonyme de Satoshi Nakamoto ( la réelle identité du créateur reste toujours inconnue). L'objectif de Nakamoto au commencement était rien de plus que de créer un système informatique de trésorerie pairs à pairs (P2P) . Les gens avaient longtemps essayé de créer une sorte de système d'argent numérique en ligne, mais avaient toujours échoué en raison des problèmes avec la centralisation. Face à ce constat, il a donc décidé de créer un système de trésorerie numérique qui n'avait aucune autorité centralisée. C'est ainsi qu’a vu le jour la naissance du bitcoins et l'utilisation de la blockchain pour une monnaie numérique.                     </div>
                  </div>
                  <div class="spacer_40"></div>
                  {# <div class="text-center bitwallet-btn modeltheme_button wow fadeInRight">
