--- a/src/CoreBundle/Resources/views/Default/layout.html.twig
+++ b/src/CoreBundle/Resources/views/Default/layout.html.twig
@@ -124,7 +124,7 @@
                     <!-- BOTTOM BAR -->
                     <nav id="modeltheme-main-head" class="navbar navbar-default transparent-nav">
                         <div class="container">
-                            <div class="row">
+                            <div class="row" style="display: flex; align-items: center;">
                                 <!-- LOGO -->
                                 <div class="navbar-header col-md-2">
                                     <!-- NAVIGATION BURGER MENU -->
