--- a/src/FrontBundle/Resources/public/assets/css/media-screens.css
+++ b/src/FrontBundle/Resources/public/assets/css/media-screens.css
@@ -274,7 +274,7 @@ URL:        http://cryptic.modeltheme.com/
     }
     #to_products .title-subtile-holder,
     .button-winona.btn.btn-medium.btn_custom_blue_grad {
-        margin-left: 40px;
+        margin-bottom: 20px;
     }
     #to_products img {
         padding-left: 40px;
