--- a/src/FrontBundle/Resources/views/Default/menu.html.twig
+++ b/src/FrontBundle/Resources/views/Default/menu.html.twig
@@ -11,7 +11,7 @@
             <ul id="menu-one-page" class="menu">
 
                 <li class="homepages-badge menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-ancestor current-menu-parent current_page_parent current_page_ancestor menu-item-has-children">
-                    <a href="#">Crypto</a>
+                    <a href="#">Crypto </a>
                     <ul class="sub-menu" style="background-color: transparent">
                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home"><a href="{{ path('default_bitcoin') }}">Bitcoin</a></li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="{{ path('default_litecoin') }}">Litecoin</a></li>
@@ -21,9 +21,15 @@
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_blockchain') }}">Blockchain</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_histoire_crypto') }}">Histoire de la Crypto</a></li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('default_crypto_eco') }}">La Crypto et l'Economie</a></li>
-                <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/profile">Mon Compte</a></li>
+                 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li class="menu-item menu-item-type-custom menu-item-object-custom"><a href="/profile">Mon Compte</a></li>
+                {% endif %}
                 
-                <li class="to_whitepaper menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('fos_user_security_login') }}">Connexion</a></li>
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                     <li class="to_whitepaper logout-button menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('fos_user_security_logout') }}" style="btn_custom_red_grad">Deconnexion</a></li>
+                {% else %}
+                    <li class="to_whitepaper menu-item menu-item-type-custom menu-item-object-custom"><a href="{{ path('fos_user_security_login') }}">Connexion</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
