--- a/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
+++ b/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
@@ -5,7 +5,7 @@
  <div id="to_products" class="padding_top-80 text_center page-fill">
      <div class="container">
          <div class="row vc_row-has-fill">
-             <div class="col-sm-7">
+             <div class="col-sm-6" style="padding-top:30px;">
                  <div class="title-subtile-holder wow fadeInLeft text_left">
                      <h1 class="section-title light_title no-margin">Le début des monnaies numériques</h1>
                      <div class="spacer_10"></div>
@@ -20,7 +20,7 @@
                      <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
                  </div> #}
              </div>
-             <div class="col-sm-5">
+             <div class="col-sm-6" style="padding-top:30px;">
                  <figure class="fadeInRight wow">
                      <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
                  </figure>
