--- a/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
+++ b/src/FrontBundle/Resources/views/Default/histoire_crypto.html.twig
@@ -5,7 +5,7 @@
  <div id="to_products" class="padding_top-80 text_center page-fill">
      <div class="container">
          <div class="row vc_row-has-fill">
-             <div class="col-sm-6" style="padding-top:30px;">
+             <div class="col-sm-7">
                  <div class="title-subtile-holder wow fadeInLeft text_left">
                      <h1 class="section-title light_title no-margin">Le début des monnaies numériques</h1>
                      <div class="spacer_10"></div>
@@ -20,9 +20,9 @@
                      <a href="#" class="button-winona btn btn-medium btn_custom_blue_grad">WHITEPAPPER</a>
                  </div> #}
              </div>
-             <div class="col-sm-6" style="padding-top:30px;">
+             <div class="col-sm-5" style="padding-top:30px;">
                  <figure class="fadeInRight wow">
-                     <img width="520" height="415" src="/bundles/front/assets/images/Vector-Smart-Object9_2.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
+                     <img width="356" height="356" src="/bundles/front/assets/images/bitcointodollar.png" class="fadeInRight wow" alt="Vector-Smart-Object10"/>
                  </figure>
              </div>
              <div class="spacer_80"></div>
@@ -36,11 +36,11 @@
                  </span>
              </div>
              <div class="spacer_50"></div>
-             <div class="col-sm-6 vc_col-has-fill">
+             <div class="col-sm-6 vc_col-has-fill" style="padding-top:50px;">
                  <div class="wpb_single_image wpb_content_element vc_align_left wow fadeInLeft">
                      <figure class="wpb_wrapper vc_figure">
                          <div class="vc_single_image-wrapper   vc_box_border_grey">
-                             <img width="335" height="450" src="/bundles/front/assets/images/Vector-Smart-Object9_00.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
+                             <img width="366" height="407" src="/bundles/front/assets/images/bitcoinworld.png" class="vc_single_image-img attachment-full" alt="Vector-Smart-Object9" />    
                          </div>
                      </figure>
                  </div>
